--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,4 +41,6 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'io.intercom.android:intercom-sdk-base:5.+'
+
 }
