--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
       - checkout
       - run: flutter doctor
       - run: flutter analyze
+      - run: flutter test --coverage
       - run: bash <(curl -s https://codecov.io/bash)
       - store_artifacts:
           path: coverage/lcov.info
