--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  mockito: ^2.2.3
+
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
