--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - checkout
       - run: flutter doctor
-      - run: flutter analyze
+      - run: flutter analyze -v
       - run: flutter test --coverage
       - run: bash <(curl -s https://codecov.io/bash)
       - store_artifacts:
