--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -21,7 +21,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  intercom:
+  intercom_flutter:
     path: ../
 
 # For information on the generic Dart part of this file, see the
