--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: intercom_flutter
 description: Flutter Intercom integration
 version: 1.0.9
-author: Maido Käära <maido@getchange.com>
-homepage: https://github.com/ChangeFinance/intercom_flutter
+author: Maido Käära <m@maido.io>
+homepage: https://github.com/v3rm0n/intercom_flutter
 
 dependencies:
   flutter:
