--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   plugin:
-    androidPackage: com.getchange.intercom
+    androidPackage: io.maido.intercom
     pluginClass: IntercomFlutterPlugin
 
 environment:
