--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: intercom_flutter
 description: Flutter plugin for Intercom integration. Provides in-app messaging
   and help-center Intercom services
-version: 2.0.2
+version: 2.0.3
 author: Maido Käära <m@maido.io>
 homepage: https://github.com/v3rm0n/intercom_flutter
 
@@ -24,5 +24,5 @@ flutter:
     pluginClass: IntercomFlutterPlugin
 
 environment:
-  sdk: ">=2.0.0-dev.28.0 <3.0.0"
-  flutter: ">=0.5.0 <2.0.0"
+  sdk: ">=2.0.0 <3.0.0"
+  flutter: ">=1.0.0 <2.0.0"
