Updated AndroidManifest.xml to resolve merging error with Flutter apps with minSdk less than version 21.

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="io.maido.intercom">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="io.maido.intercom">
+  <uses-sdk android:minSdkVersion="21" />
 </manifest>
