--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  plugin_platform_interface: ^1.1.0-nullsafety.1
+  plugin_platform_interface: ^1.0.3
   uuid: ^2.2.2 # to get the random uuid for registerUnidentifiedUser in web
 
 dev_dependencies:
