--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ pubspec.lock
 build/
 .idea/
 android/bin/
+
+example/.flutter-plugins-dependencies
+
+example/ios/Flutter/flutter_export_environment.sh
