--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
-        flutter-version: '1.22.3'
+        channel: 'stable'
     - run: flutter pub get
+    - run: flutter analyze
     - run: flutter test
