Implement null-safety (#125)
* Migrate intercom_flutter to null safety

* Migrates example to null safety

* Bump version

* Apply suggestions from code review

Co-authored-by: Cristian Zazo <cristian.zazo@gmail.com>

* style: remove empty lines

* chore: update Flutter version in CI tests

* Update .github/workflows/main.yml

Co-authored-by: Cristian Zazo <cristian.zazo@gmail.com>

Co-authored-by: Cristian Zazo <cristian.zazo@gmail.com>

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,6 @@
 name: intercom_example
 description: Demonstrates how to use the intercom_flutter plugin.
+publish_to: none
 
 version: 1.0.0+1
 
@@ -14,4 +15,4 @@ flutter:
   uses-material-design: true
 
 environment:
-  sdk: '>=2.10.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
