--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,11 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  test:
+  # job for plugin intercom_flutter
+  intercom_flutter:
     runs-on: ubuntu-latest
+    env:
+      source-directory: ./intercom_flutter
 
     steps:
     - uses: actions/checkout@v2
@@ -23,6 +26,48 @@ jobs:
     - uses: subosito/flutter-action@v1
       with:
         channel: 'stable'
-    - run: flutter pub get
-    - run: flutter analyze
-    - run: flutter test
+    
+    # Download all Flutter packages
+    - name: Download dependencies
+      run: flutter pub get
+      working-directory: ${{env.source-directory}}
+
+    # Run Flutter Analyzer
+    - name: Run Flutter Analyzer
+      run: flutter analyze
+      working-directory: ${{env.source-directory}}
+
+    # Run all unit-tests with code coverage
+    - name: Run unit tests
+      run: flutter test --coverage
+      working-directory: ${{env.source-directory}}
+
+  # job for plugin intercom_flutter_platform_interface
+  intercom_flutter_platform_interface:
+    runs-on: ubuntu-latest
+    env:
+      source-directory: ./intercom_flutter_platform_interface
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    - uses: subosito/flutter-action@v1
+      with:
+        channel: 'stable'
+    
+    # Download all Flutter packages
+    - name: Download dependencies
+      run: flutter pub get
+      working-directory: ${{env.source-directory}}
+
+    # Run Flutter Analyzer
+    - name: Run Flutter Analyzer
+      run: flutter analyze
+      working-directory: ${{env.source-directory}}
+
+    # Run all unit-tests with code coverage
+    - name: Run unit tests
+      run: flutter test --coverage
+      working-directory: ${{env.source-directory}}
