--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,3 +71,35 @@ jobs:
     - name: Run unit tests
       run: flutter test --coverage
       working-directory: ${{env.source-directory}}
+
+  # job for plugin intercom_flutter_web
+  intercom_flutter_web:
+    runs-on: ubuntu-latest
+    env:
+      source-directory: ./intercom_flutter_web
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: nanasess/setup-chromedriver@master
+    - run: chromedriver --url-base=/wd/hub --port=4444
+
+    - uses: actions/checkout@v2
+    - uses: subosito/flutter-action@v1
+      with:
+        channel: 'stable'
+    
+    # Download all Flutter packages
+    - name: Download dependencies
+      run: flutter pub get
+      working-directory: ${{env.source-directory}}/example
+
+    # Run Flutter Analyzer
+    - name: Run Flutter Analyzer
+      run: flutter analyze
+      working-directory: ${{env.source-directory}}/example
+
+    # Run all integration tests
+    - name: Run integration tests
+      run: flutter drive -d web-server --browser-name=chrome --driver=test_driver/integration_test.dart --target=integration_test/intercom_flutter_web_test.dart
+      working-directory: ${{env.source-directory}}/example
+      
