--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,7 +81,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: nanasess/setup-chromedriver@master
-    - run: chromedriver --url-base=/wd/hub --port=4444
+    - run: |
+      export DISPLAY=:99
+      chromedriver --url-base=/wd/hub --port=4444 &
+      sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
 
     - uses: actions/checkout@v2
     - uses: subosito/flutter-action@v1
@@ -102,4 +105,3 @@ jobs:
     - name: Run integration tests
       run: flutter drive -d web-server --browser-name=chrome --driver=test_driver/integration_test.dart --target=integration_test/intercom_flutter_web_test.dart
       working-directory: ${{env.source-directory}}/example
-      
