--- a/.github/workflows/cancel.yml
+++ b/.github/workflows/cancel.yml
@@ -1,13 +1,12 @@
 name: Cancel
-on:
-  workflow_run:
-    workflows: ["CI"]
-    types:
-      - requested
+on: [push]
 jobs:
   cancel:
+    name: 'Cancel Previous Runs'
     runs-on: ubuntu-latest
+    timeout-minutes: 3
     steps:
-    - uses: styfle/cancel-workflow-action@0.9.0
-      with:
-        workflow_id: ${{ github.event.workflow.id }}
+      - uses: styfle/cancel-workflow-action@0.9.0
+        with:
+          workflow_id: 791673239
+          access_token: ${{ github.token }}
