--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,7 +82,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: nanasess/setup-chromedriver@master
     - run: |
-      export DISPLAY=:99
+      export DISPLAY=:99 &
       chromedriver --url-base=/wd/hub --port=4444 &
       sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
 
