--- a/intercom_flutter_web/example/pubspec.yaml
+++ b/intercom_flutter_web/example/pubspec.yaml
@@ -15,6 +15,9 @@ dev_dependencies:
   integration_test:
     sdk: flutter
 
+dependency_overrides:
+  crypto: ^3.0.0
+
 environment:
   sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.26.0-0" # For integration_test from sdk
