--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,7 +80,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
+    
     # intsall chrome driver
     - name: Install ChromeDriver
       run: |
@@ -98,7 +98,7 @@ jobs:
     - uses: subosito/flutter-action@v1
       with:
         channel: 'master'
-
+    
     # Download all Flutter packages
     - name: Download dependencies
       run: flutter pub get
@@ -109,9 +109,10 @@ jobs:
       run: flutter analyze
       working-directory: ${{env.source-directory}}
 
-    # Run the chromedrive
-    - name: Run Chrome Driver
-      run: chromedriver --url-base=/wd/hub --port=4444 &
+    # Run chrome driver
+    - name: Run chrome driver
+      run: chromedriver --port=4444 &
+      working-directory: ${{env.source-directory}}
 
     # Run all integration tests
     - name: Run integration tests
