--- a/intercom_flutter/pubspec.yaml
+++ b/intercom_flutter/pubspec.yaml
@@ -7,6 +7,7 @@ homepage: https://github.com/v3rm0n/intercom_flutter
 dependencies:
   flutter:
     sdk: flutter
+  intercom_flutter_platform_interface: ^0.0.1
 
 dev_dependencies:
   flutter_test:
