--- a/intercom_flutter/android/build.gradle
+++ b/intercom_flutter/android/build.gradle
@@ -42,4 +42,5 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'io.intercom.android:intercom-sdk:10.4.0'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
 }
