--- a/intercom_flutter/android/src/main/AndroidManifest.xml
+++ b/intercom_flutter/android/src/main/AndroidManifest.xml
@@ -1,3 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="io.maido.intercom">
+
+  <application>
+    <receiver
+      android:name="io.maido.intercom.PushInterceptReceiver"
+      android:exported="true"
+      android:permission="com.google.android.c2dm.permission.SEND">
+      <intent-filter>
+        <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+      </intent-filter>
+    </receiver>
+  </application>
 </manifest>
