--- a/intercom_flutter/example/android/app/src/main/AndroidManifest.xml
+++ b/intercom_flutter/example/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:name=".MainActivity"
         android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density"
         android:hardwareAccelerated="true"
+        android:exported="true"
         android:launchMode="singleTop"
         android:theme="@style/LaunchTheme"
         android:windowSoftInputMode="adjustResize">
