--- a/intercom_flutter/example/android/app/src/main/AndroidManifest.xml
+++ b/intercom_flutter/example/android/app/src/main/AndroidManifest.xml
@@ -19,15 +19,10 @@
         android:name=".MainActivity"
         android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density"
         android:hardwareAccelerated="true"
+        android:exported="true"
         android:launchMode="singleTop"
         android:theme="@style/LaunchTheme"
         android:windowSoftInputMode="adjustResize">
-
-      <!-- Specify that the launch screen should continue being displayed -->
-      <!-- until Flutter renders its first frame. -->
-      <meta-data
-          android:name="io.flutter.embedding.android.SplashScreenDrawable"
-          android:resource="@drawable/launch_background" />
 
       <!-- Theme to apply as soon as Flutter begins rendering frames -->
       <meta-data
