--- a/intercom_flutter/pubspec.yaml
+++ b/intercom_flutter/pubspec.yaml
@@ -1,7 +1,7 @@
 name: intercom_flutter
 description: Flutter plugin for Intercom integration. Provides in-app messaging
   and help-center Intercom services
-version: 6.1.0
+version: 6.2.0
 homepage: https://github.com/v3rm0n/intercom_flutter
 
 dependencies:
@@ -10,7 +10,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   intercom_flutter_platform_interface: ^1.0.1
-  intercom_flutter_web : ^0.0.4
+  intercom_flutter_web: ^0.0.4
 
 dev_dependencies:
   flutter_test:
@@ -29,5 +29,5 @@ flutter:
         default_package: intercom_flutter_web
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=2.0.0"
