--- a/intercom_flutter/pubspec.yaml
+++ b/intercom_flutter/pubspec.yaml
@@ -17,6 +17,11 @@ dev_dependencies:
     sdk: flutter
   collection: ^1.17.2
 
+dependency_overrides:
+  intercom_flutter_platform_interface:
+    path: ../intercom_flutter_platform_interface
+    version: ^1.2.0
+
 flutter:
   plugin:
     platforms:
