--- a/intercom_flutter/pubspec.yaml
+++ b/intercom_flutter/pubspec.yaml
@@ -17,6 +17,7 @@ dev_dependencies:
     sdk: flutter
   collection: ^1.17.2
 
+# TODO - remove before publishing
 dependency_overrides:
   intercom_flutter_platform_interface:
     path: ../intercom_flutter_platform_interface
