--- a/intercom_flutter_web/pubspec.yaml
+++ b/intercom_flutter_web/pubspec.yaml
@@ -24,6 +24,13 @@ dev_dependencies:
     sdk: flutter
   mockito: ^5.4.0
 
+# TODO - remove before publis`z
+  hing
+dependency_overrides:
+  intercom_flutter_platform_interface:
+    path: ../intercom_flutter_platform_interface
+    version: ^1.2.0
+
 environment:
   sdk: ">=3.2.0 <4.0.0"
   flutter: ">=3.10.0"
