--- a/intercom_flutter/pubspec.yaml
+++ b/intercom_flutter/pubspec.yaml
@@ -9,8 +9,10 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  intercom_flutter_platform_interface: ^1.3.0
-  intercom_flutter_web: ^0.3.0
+  intercom_flutter_platform_interface:
+    path: ../intercom_flutter_platform_interface
+  intercom_flutter_web:
+    path: ../intercom_flutter_web
 
 dev_dependencies:
   flutter_test:
