--- a/intercom_flutter/pubspec.yaml
+++ b/intercom_flutter/pubspec.yaml
@@ -1,7 +1,7 @@
 name: intercom_flutter
 description: Flutter plugin for Intercom integration. Provides in-app messaging
   and help-center Intercom services
-version: 7.6.3+1
+version: 7.6.4
 homepage: https://github.com/v3rm0n/intercom_flutter
 
 dependencies:
@@ -9,8 +9,8 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  intercom_flutter_platform_interface: ^1.2.2
-  intercom_flutter_web: ^0.2.2
+  intercom_flutter_platform_interface: ^1.2.3
+  intercom_flutter_web: ^0.2.3
 
 dev_dependencies:
   flutter_test:
