--- a/intercom_flutter/example/android/app/src/main/AndroidManifest.xml
+++ b/intercom_flutter/example/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
        additional functionality it is fine to subclass or reimplement
        FlutterApplication and put your custom class here. -->
   <application
+      android:name=".MyApp"
       android:icon="@mipmap/ic_launcher"
       android:label="intercom_example">
     <activity
