--- a/intercom_flutter/android/build.gradle
+++ b/intercom_flutter/android/build.gradle
@@ -27,6 +27,8 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 33
 
+    namespace 'io.maido.intercom'
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
