--- a/intercom_flutter/android/build.gradle
+++ b/intercom_flutter/android/build.gradle
@@ -26,9 +26,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 33
-
-    namespace 'io.maido.intercom'
-
+  
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
@@ -38,6 +36,9 @@ android {
     }
     lintOptions {
         disable 'InvalidPackage'
+    }
+    if (project.android.hasProperty('namespace')) {
+        namespace 'io.maido.intercom'
     }
 }
 
