--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,7 +99,7 @@ jobs:
         && cd /tmp \
         && unzip chromedriver_linux64.zip \
         && rm -rf chromedriver_linux64.zip \
-        && sudo mv chromedriver_linux64 /usr/local/bin/chromedriver \
+        && sudo mv chromedriver-linux64 /usr/local/bin/chromedriver \
         && sudo chmod +x /usr/local/bin/chromedriver \
         && chromedriver --version
       
