--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,16 +91,15 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    # intsall chrome driver
+    # install chrome driver
     - name: Install ChromeDriver
       run: |
-        CHROME_VERSION=$(google-chrome --version | cut -f 3 -d ' ' | cut -d '.' -f 1) \
-        && CHROMEDRIVER_RELEASE=$(curl --location --fail --retry 3 http://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION}) \
-        && curl --silent --show-error --location --fail --retry 3 --output /tmp/chromedriver_linux64.zip "http://chromedriver.storage.googleapis.com/$CHROMEDRIVER_RELEASE/chromedriver_linux64.zip" \
+        CHROMEDRIVER_VERSION=$(google-chrome --version | sed 's/[^0-9.]//g') \
+        && curl --silent --show-error --location --fail --retry 3 --output /tmp/chromedriver_linux64.zip "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/$CHROMEDRIVER_VERSION/linux64/chromedriver-linux64.zip" \
         && cd /tmp \
         && unzip chromedriver_linux64.zip \
         && rm -rf chromedriver_linux64.zip \
-        && sudo mv chromedriver /usr/local/bin/chromedriver \
+        && sudo mv chromedriver-linux64 /usr/local/bin/chromedriver \
         && sudo chmod +x /usr/local/bin/chromedriver \
         && chromedriver --version
       
