--- a/intercom_flutter/android/build.gradle
+++ b/intercom_flutter/android/build.gradle
@@ -26,7 +26,6 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 33
-
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
@@ -36,6 +35,9 @@ android {
     }
     lintOptions {
         disable 'InvalidPackage'
+    }
+    if (project.android.hasProperty('namespace')) {
+        namespace 'io.maido.intercom'
     }
 }
 
