--- a/intercom_flutter_web/pubspec.yaml
+++ b/intercom_flutter_web/pubspec.yaml
@@ -1,6 +1,6 @@
 name: intercom_flutter_web
 description: Web platform implementation of intercom_flutter
-version: 0.3.3
+version: 1.0.0
 homepage: https://github.com/v3rm0n/intercom_flutter
 
 flutter:
@@ -15,8 +15,8 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  intercom_flutter_platform_interface: ^1.3.2
-  uuid: ^3.0.7 # to get the random uuid for registerUnidentifiedUser in web
+  intercom_flutter_platform_interface: ^2.0.0
+  uuid: ^3.0.7 # to get the random uuid for loginUnidentifiedUser in web
 
 dev_dependencies:
   flutter_test:
