--- a/intercom_flutter/example/android/app/build.gradle
+++ b/intercom_flutter/example/android/app/build.gradle
@@ -68,5 +68,5 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
