--- a/intercom_flutter_web/pubspec.yaml
+++ b/intercom_flutter_web/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
     sdk: flutter
   intercom_flutter_platform_interface: ^2.0.0
   uuid: ^4.2.1 # to get the random uuid for loginUnidentifiedUser in web
-  web: '>=0.3.0 <0.6.0'
+  web: ^1.0.0
 
 dev_dependencies:
   flutter_test:
