Update integration test command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,5 +117,6 @@ jobs:
 
     # Run all integration tests
     - name: Run integration tests
+      timeout-minutes: 10
       run: flutter drive -d web-server --browser-name=chrome --driver=test_driver/integration_test.dart --target=integration_test/intercom_flutter_web_test.dart
       working-directory: ${{env.source-directory}}
